# aaactl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
Ctl/: VERSION  common.yaml  config.yaml  dev.example.yaml  tmplvars.yaml
Ctl/dev/: docker-compose.yml  run.sh
Ctl/docker/: django-uwsgi.ini  entrypoint.sh  manage.sh
Ctl/tmpl/settings.d/: 01-local.conf  10-base.conf  15-billing.conf  15-oauth.conf  20-rest.conf
docs/: aaactl_import_users.md  aaactl_user_import_usage.md  billing.md  contact-form.md  deploy.md  impersonate.md  permissions.md  service-applications.md  settings.md  social-auth.md  whitelabel.md
src/: init.json  manage.py
src/aaactl/: __init__.py  urls.py  wsgi.py
src/aaactl/settings/: __init__.py  dev.py  run_tests.py
src/account/: admin.py  apps.py  backends.py  context_processors.py  decorators.py  forms.py  grainy_ext.py  impersonate.py  middleware.py  models.py  session.py  signals.py  tasks.py  urls.py  validators.py
src/account/migrations/: 0001_initial.py  0002_auto_20200312_1013.py  0003_auto_20200312_1230.py  0004_auto_20200313_1703.py  0005_organization_organizationuser.py  0006_organization_user.py  0007_auto_20200323_0850.py  0008_organization_slug.py  0009_auto_20200323_1425.py  0010_invitation.py  0011_auto_20200324_1131.py  0012_auto_20200324_1357.py  0013_emailconfirmation_passwordreset.py  0014_auto_20200327_1153.py  0015_auto_20200410_1018.py  0016_alter_foreign_keys.py  0017_managedpermission.py  0018_auto_20210422_0920.py  0019_auto_20210423_1130.py  0020_auto_20210423_1224.py  0021_usersettings_opt_promotions.py  0022_default_org.py  0023_managed_org_perms.py  0024_reftag_refactor.py  0024_reftag_user_settings.py  0025_fix_permission_namespaces.py  0025_reftag_pass_1.py  0026_reftag_pass_2.py  0026_reftag_refactor_3.py  0027_fix_permission_namespaces.py  0028_permission_roles.py  0029_permission_roles_2.py  0030_migrate_to_roles.py  0031_user_permission_override.py  0032_alter_userpermissionoverride_unique_together.py  0033_auto_20220816_1542.py  0034_impersonation.py  0035_organizationmanagedpermission_product.py  0036_contactmessage.py  0037_contactmessage_type.py  (+6 more)
src/account/models/: __init__.py  federation.py
src/account/rest/: authentication.py  decorators.py  serializers.py  urls.py  views.py
src/account/social_backends/: peeringdb.py
src/account/templatetags/: aaactl.py
src/account/views/: auth.py  controlpanel.py  diag.py
src/account_service/: urls.py  wsgi.py
src/account_service/settings/: __init__.py  dev.py
src/applications/: admin.py  models.py  service_bridge.py  urls.py  views.py
src/applications/migrations/: 0001_initial.py  0002_auto_20210209_1251.py  0003_auto_20210211_1413.py  0004_auto_20210212_1421.py  0005_service_logo.py  0006_service_group.py  0007_service_org.py  0008_auto_20220708_1348.py  0009_fieldnames.py  0010_reftag_pass.py  0011_service_trial_product.py  0012_alter_service_trial_product.py  0013_service_description.py  0014_service_always_show_dashboard.py  0015_service_cross_promote.py  0016_service_config.py
src/applications/rest/: serializers.py  urls.py  views.py
src/billing/: admin.py  apps.py  const.py  exceptions.py  forms.py  models.py  signals.py  stripe_views.py  tasks.py  urls.py  views.py
src/billing/migrations/: 0001_initial.py  0002_auto_20210112_0940.py  0003_auto_20210112_1021.py  0004_auto_20210112_1041.py  0005_auto_20210127_1631.py  0006_auto_20210215_1905.py  0007_auto_20210805_0835.py  0008_reftag_pass_1.py  0008_reftag_refactor.py  0009_reftag_pass_2.py  0009_reftag_refactor_2.py  0010_reftag_pass_3.py  0010_reftag_refactor_3.py  0011_reftag_pass_4.py  0012_reftag_pass_5.py  0013_reftag_pass_6.py  (+39 more)
src/common/: admin.py  email.py  models.py
src/django_aaactl/: apps.py
src/fixtures/: fixture.full-perms.json  fixture.perms.json
src/tests/: conftest.py  djangoinit.py  fixtures.py  helpers.py  test_aaactl_import_users.py  test_account_api.py  test_account_api_federation.py  test_account_context_processors.py  test_account_impersonate.py  test_account_managed_organization_role.py  test_account_managed_permission_role_auto_grant.py  test_account_managed_permissions.py  test_account_middleware.py  test_account_models.py  test_account_role.py  test_account_signals.py  test_account_validators.py  test_account_views.py  test_billing_admin.py  test_billing_api.py  test_billing_management.py  test_billing_models.py  test_billing_payment_processors.py  test_billing_views.py  test_oauth_pipelines.py
src/whitelabel/: apps.py
src/whitelabel_fullctl/: admin.py  apps.py  models.py
(+194 files in other folders)
