[tool.poetry]
name = "aaactl"
repository = "https://github.com/fullctl/aaactl"
version = "1.0.0-rc2"
description = "account control"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]


[tool.poetry.scripts]
aaactl = "aaactl.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
fullctl = { git = "https://github.com/fullctl/fullctl.git", branch = "prep-release" }
uWSGI = "^2.0.19"

# not in fullctl
python-dateutil = "*"
django-countries = "*"
django-cors-middleware = "*"
django-oauth-toolkit = "*"

stripe = "^2.55.2"

[tool.poetry.dev-dependencies]
docker-compose = "^1.29.1"

# tests
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"
pytest-filedata = "<1"
pytest-mock = ">=3.2.0"
codecov = ">=2"
coverage = ">=5"


# linting
bandit = "^1.6.2"
black = {version = ">=20", allow-prereleases = true}
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13.0"
pyupgrade = "^2.19.4"

# ctl
ctl = "^1.0.0"
tmpl = "^1"
Jinja2 = "^2.11.3"

[tool.isort]
profile = "black"
multi_line_output = 3
